add_compressor page added and some issues fixed

--- a/add_log.html
+++ b/add_log.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <main>
+
+    <nav>
+        <li><a href="log_details.html">Zpět</a> </li>
+    </nav>
     <header>
         <h1>Přidat ponor</h1>
     </header>
@@ -21,6 +25,8 @@
                 <input type="number" id="kon_tlak" placeholder="Koncový tlak">
                 <label for="buddy">Buddy:</label>
                 <input type="text" id="buddy" placeholder="Buddy">
+                <label for="loc">Lokalita</label>
+                <input type="text" id="loc">
                 <label for="date">Datum ponoru:</label>
                 <input type="date" id="date" required>
                 <input type="submit" value="Přidat ponor">
