--- a/compressor.html
+++ b/compressor.html
@@ -15,7 +15,7 @@
     <div>
         <div>
             <h1>Kompresor</h1>
-            <a href="add_log.html">Přidat kompresor</a>
+            <a href="add_compressor.html">Přidat kompresor</a>
             <table>
             <tr> <th>Výrobce</th> <th> Typ</th> <th>Servisováno</th> <th>Další servis za</th></tr>
             <tr><td>Benda</td> <td>MK120</td> <td>21.12.2016</td><td> 30 hod</td></tr>
