--- a/log_details.html
+++ b/log_details.html
@@ -10,23 +10,20 @@
         <li><a href="log_book.html">Zpět</a> </li>
     </nav>
     <section>
-        <h2>Editovat log</h2>
-        <form>
-            <label for="hloubka">Hloubka:</label>
-            <input type="text" id="hloubka" value="50" >
-            <label for="doba">Doba ponoru:</label>
-            <input type="number" id="doba" value="30">
-            <label for="poc_tlak">Počáteční tlak</label>
-            <input type="number" id="poc_tlak" value="200">
-            <label for="kon_tlak">Koncový tlak</label>
-            <input type="number" id="kon_tlak" value="50">
-            <label for="buddy">Buddy:</label>
-            <input type="text" id="buddy" value="Pepa">
-            <label for="date">Datum ponoru:</label>
-            <input type="date" id="date">
-            <input type="submit" value="Uložit změny">
-            <input type="reset" value="Storno">
-        </form>
+        <h2>Detail ponoru</h2>
+        <table>
+        <tr> <th>Lokalita</th><th>Hloubka</th><th>Čas</th> <th>Počáteční tlak</th> <th>Konečný tlak</th> <th>Buddy</th><th>Datum</th></tr>
+            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
+            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
+            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
+            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
+            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
+            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
+            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
+
+        </table>
+        <button type="button">Editovat</button>
+        <button type="button">Vložit nový</button>
     </section>
 </main>
 
