log details edited

--- a/log_details.html
+++ b/log_details.html
@@ -14,14 +14,17 @@
         <table>
         <tr> <th>Lokalita</th><th>Hloubka</th><th>Čas</th> <th>Počáteční tlak</th> <th>Konečný tlak</th> <th>Buddy</th><th>Datum</th></tr>
             <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
-            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
-            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
-            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
-            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
-            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
-            <tr><td>Slapy</td> <td>30</td> <td>50</td><td>200 bar</td><td> 50 bar</td><td> Pepa</td><td>21.12.2017</td></tr>
+
 
         </table>
+        <p> Lokalita: Slapy</p>
+        <!-- Mapa -->
+        <p>Hloubka: 30m</p>
+        <p>Čas: 50 min</p>
+        <p> Počáteční tlak: 200 bar</p>
+        <p> Konečný tlak: 50 bar</p>
+        <p>Buddy: Pepa</p>
+        <p>Datum: 21.12.2017</p>
         <button type="button">Editovat</button>
         <button type="button">Vložit nový</button>
     </section>
