add_comp_log.html added and add comp log link log

--- a/compressor.html
+++ b/compressor.html
@@ -24,7 +24,7 @@
         <section>
             <div>
                 <h2>Kompresor log</h2>
-
+                <a href="add_comp_log.html">Přidat záznam</a>
                 <table>
 
 
