--- a/add_log.html
+++ b/add_log.html
@@ -8,29 +8,28 @@
 <main>
 
     <nav>
-        <li><a href="log_details.html">Zpět</a> </li>
+        <li><a href="log_book.html">Zpět</a> </li>
     </nav>
     <header>
         <h1>Přidat ponor</h1>
     </header>
     <section>
         <form>
-                <label for="hloubka">Hloubka:</label>
-                <input type="text" id="hloubka" placeholder="Hloubka" required>
-                <label for="doba">Doba ponoru:</label>
-                <input type="number" id="doba" placeholder="Doba ponoru" required>
-                <label for="poc_tlak">Počáteční tlak</label>
-                <input type="number" id="poc_tlak" placeholder="Počáteční tlak">
-                <label for="kon_tlak">Koncový tlak</label>
-                <input type="number" id="kon_tlak" placeholder="Koncový tlak">
-                <label for="buddy">Buddy:</label>
-                <input type="text" id="buddy" placeholder="Buddy">
-                <label for="loc">Lokalita</label>
-                <input type="text" id="loc">
-                <label for="date">Datum ponoru:</label>
-                <input type="date" id="date" required>
-                <input type="submit" value="Přidat ponor">
-                <input type="reset" value="Resetovat">
+
+            <label for="hloubka">Hloubka:</label>
+            <input type="number" min="0" max="1000" id="hloubka" placeholder="Hloubka" required>
+            <label for="doba">Doba ponoru:</label>
+            <input type="number" step="5" id="doba" min="0"max="10000" placeholder="Doba ponoru" required>
+            <label for="poc_tlak">Počáteční tlak</label>
+            <input type="number" step="10" id="poc_tlak" min="0" max="400" placeholder="Počáteční tlak">
+            <label for="kon_tlak">Koncový tlak</label>
+            <input type="number" step="10" id="kon_tlak" min="0" max="400" placeholder="Koncový tlak">
+            <label for="buddy">Buddy:</label>
+            <input type="text" id="buddy" placeholder="Buddy">
+            <label for="date">Datum ponoru:</label>
+            <input type="date" id="date" required>
+            <input type="submit" value="Přidat ponor">
+            <input type="reset" value="Resetovat">
         </form>
     </section>
 </main>
