--- a/log_edit.html
+++ b/log_edit.html
@@ -13,19 +13,17 @@
     <h2>Editovat log</h2>
     <form>
         <label for="hloubka">Hloubka:</label>
-        <input type="text" id="hloubka" value="50" >
+        <input type="number" min="0" max="1000" id="hloubka" placeholder="Hloubka" required>
         <label for="doba">Doba ponoru:</label>
-        <input type="number" id="doba" value="30">
+        <input type="number" step="5" id="doba" min="0"max="10000" placeholder="Doba ponoru" required>
         <label for="poc_tlak">Počáteční tlak</label>
-        <input type="number" id="poc_tlak" value="200">
+        <input type="number" step="10" id="poc_tlak" min="0" max="400" placeholder="Počáteční tlak">
         <label for="kon_tlak">Koncový tlak</label>
-        <input type="number" id="kon_tlak" value="50">
+        <input type="number" step="10" id="kon_tlak" min="0" max="400" placeholder="Koncový tlak">
         <label for="buddy">Buddy:</label>
-        <input type="text" id="buddy" value="Pepa">
-        <label for="loc">Lokalita</label>
-        <input type="text" id="loc">
+        <input type="text" id="buddy" placeholder="Buddy">
         <label for="date">Datum ponoru:</label>
-        <input type="date" id="date">
+        <input type="date" id="date" required>
         <input type="submit" value="Uložit změny">
         <input type="reset" value="Storno">
     </form>
