--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
 <section>
 
     <img src="http://www.csueastbay.edu/directory/profiles/files/images/sample-profile-pic.png" alt="profile picture">
-    <button type="button">Nový</button>
+    <button type="button">Nový|změnit</button>
     <button type="button">Upravit</button>
     <div class="user_info">
         <p>Jan Novák</p>
