Added few css to index and log edit and log book

--- a/add_comp_log.html
+++ b/add_comp_log.html
@@ -8,7 +8,8 @@
 <main>
 
     <nav>
-        <li><a href="compressor.html">Zpět</a> </li>
+        <ul>
+        <li><a href="compressor.html">Zpět</a> </li></ul>
     </nav>
     <section>
         <form>
