--- a/registration.html
+++ b/registration.html
@@ -7,7 +7,7 @@
 <body>
 <main>
     <section>
-
+        <h1>Registrace</h1>
         <form>
             <label for="jmeno">Jméno:</label>
             <input type="text" id="jmeno" required>
