--- a/index.html
+++ b/index.html
@@ -1,62 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Divers Log Book</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-<header>
+<div class="container-fluid">
+<header class="row">
+    <div class="col-md-5">
     <h1> Divers Log book</h1>
-    <h2> Vložte svůj první ponor!</h2>
+
+    </div>
+
+    <div class="col-md-7">
+
+
+        <div class="text-right">
+            <h3 class="login-text">Login: </h3>
+            <form class="form-inline">
+                <label for="email"> Email:</label>
+                <input type="text" class="form-control" id="email" value="@" required>
+                <label for="pass">Heslo:</label>
+                <input type="password" class="form-control" id="pass" placeholder="****" required>
+                <input type="submit" class="btn btn-default" value="PŘIHLÁSIT SE">
+
+            </form>
+        </div>
 </header>
-<section>
-    <div class="left_collumn">
-    <form>
+<section class="row">
+    <div class="col-md-5">
+        <h2> Vložte svůj první ponor!</h2>
+
+    <form class="form-group">
+
         <label for="hloubka">Hloubka:</label>
-        <input type="number" min="0" max="1000" id="hloubka" placeholder="Hloubka" required>
+        <input type="number" min="0" class="form-control" max="1000" id="hloubka" placeholder="Hloubka" required>
         <label for="doba">Doba ponoru:</label>
-        <input type="number" step="5" id="doba" min="0"max="10000" placeholder="Doba ponoru" required>
+        <input type="number" step="5" id="doba" class="form-control" min="0" max="10000" placeholder="Doba ponoru" required>
         <label for="poc_tlak">Počáteční tlak</label>
-        <input type="number" step="10" id="poc_tlak" min="0" max="400" placeholder="Počáteční tlak">
+        <input type="number" step="10" id="poc_tlak" class="form-control" min="0" max="400" placeholder="Počáteční tlak">
         <label for="kon_tlak">Koncový tlak</label>
-        <input type="number" step="10" id="kon_tlak" min="0" max="400" placeholder="Koncový tlak">
+        <input type="number" step="10" id="kon_tlak" class="form-control" min="0" max="400" placeholder="Koncový tlak">
         <label for="buddy">Buddy:</label>
-        <input type="text" id="buddy" placeholder="Buddy">
+        <input type="text" id="buddy" class="form-control" placeholder="Buddy">
         <label for="date">Datum ponoru:</label>
-        <input type="date" id="date" required>
-        <input type="submit" value="Přidat ponor">
-        <input type="reset" value="Resetovat">
+        <input type="date" id="date" class="form-control" required>
+        <input type="submit" class="btn btn-default" value="Přidat ponor">
+        <input type="reset" class="btn btn-default" value="Resetovat">
     </form>
     </div>
-    <div class="right_collumn">
-        <div class="right_collumn_first">
-        <form>
-            <label for="email"> Email:</label>
-            <input type="text" id="email" value="@" required>
-            <label for="pass">Heslo:</label>
-            <input type="password" id="pass" placeholder="****" required>
-            <input type="submit" value="PŘIHLÁSIT SE">
-
-        </form>
-        </div>
-        <div class="right_collumn_last">
-            <form>
+        <div class="col-md-6">
+            <h3>Registrovat se</h3>
+            <form class="form-group">
                 <label for="jmeno">Jméno:</label>
-                <input type="text" id="jmeno" required>
+                <input type="text" class="form-control" id="jmeno" required>
                 <label for="prijmeni">Příjmení:</label>
-                <input type="text" id="prijmeni" required>
+                <input type="text" class="form-control" id="prijmeni" required>
                 <label for="reg_email">Email:</label>
-                <input type="text" id="reg_email" value="@">
+                <input type="text" class="form-control" id="reg_email" value="@">
                 <label for="pass_reg">Heslo:</label>
-                <input type="password" id="pass_reg" required>
+                <input type="password" class="form-control" id="pass_reg" required>
                 <label for="pass_reg2">Heslo znovu:</label>
-                <input type="password" id="pass_reg2" required>
-                <input type="submit" value="Registrovat se!">
+                <input type="password" class="form-control" id="pass_reg2" required>
+                <input type="submit" class="btn btn-default" value="Registrovat se!">
 
             </form>
         </div>
     </div>
 </section>
-
+</div>
 </body>
 </html>
