--- a/log_book.html
+++ b/log_book.html
@@ -3,36 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Divers Log Book</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 </head>
 <body>
-<main>
-    <nav>
-        <ul>
-            <li><a href="log_book.html">Log Book</a></li>
-            <li><a href="compressor.html">Kompresor</a></li>
-        </ul>
+<main class="container-fluid">
     </nav>
-    <div>
-    <header>
-        <h1>Log Book</h1>
-        <a href="add_log.html">Přidat log</a>
-    </header>
-    <section>
-        <h2>Ponory</h2>
-    <table>
-        <tr> <th>Lokalita</th> <th> Hloubka(m)</th> <th> Čas (min)</th> </tr>
-        <tr><td>Slapy</td> <td>30</td> <td>50</td><td><a href="log_details.html">Detail</a> </td></tr>
-        <tr> <td>Orlík</td> <td> 50</td> <td>80</td><td><a href="log_details.html">Detail</a> </td></tr>
-        <tr><td>Slapy</td> <td>30</td> <td>50</td><td><a href="log_details.html">Detail</a> </td></tr>
-        <tr> <td>Orlík</td> <td> 50</td> <td>80</td><td><a href="log_details.html">Detail</a> </td></tr>
-        <tr><td>Slapy</td> <td>30</td> <td>50</td><td><a href="log_details.html">Detail</a> </td></tr>
-        <tr> <td>Orlík</td> <td> 50</td> <td>80</td><td><a href="log_details.html">Detail</a> </td></tr>
-        <tr><td>Slapy</td> <td>30</td> <td>50</td><td><a href="log_details.html">Detail</a> </td></tr>
-        <tr> <td>Orlík</td> <td> 50</td> <td>80</td><td><a href="log_details.html">Detail</a> </td></tr>
-    </table>
-    </section>
-    </div>
-    <aside>
+    <aside class="col-md-3 ">
         <img src="http://www.csueastbay.edu/directory/profiles/files/images/sample-profile-pic.png" alt="profile picture">
         <div class="user_info">
             <p>Jan Novák</p>
@@ -47,6 +25,33 @@
             </div>
         </div>
     </aside>
+
+    <div class="col-md-6 ">
+        <header>
+
+            <nav>
+                <ul class="nav nav-tabs">
+                    <li><a href="log_book.html">Log Book</a></li>
+                    <li><a href="compressor.html">Kompresor</a></li>
+                </ul>
+            <h1>Log Book</h1>
+            <a href="add_log.html">Přidat log</a>
+        </header>
+        <section>
+            <h2>Ponory</h2>
+            <table class="table">
+                <tr> <th>Lokalita</th> <th> Hloubka(m)</th> <th> Čas (min)</th> </tr>
+                <tr><td>Slapy</td> <td>30</td> <td>50</td><td><a href="log_details.html">Detail</a> </td></tr>
+                <tr> <td>Orlík</td> <td> 50</td> <td>80</td><td><a href="log_details.html">Detail</a> </td></tr>
+                <tr><td>Slapy</td> <td>30</td> <td>50</td><td><a href="log_details.html">Detail</a> </td></tr>
+                <tr> <td>Orlík</td> <td> 50</td> <td>80</td><td><a href="log_details.html">Detail</a> </td></tr>
+                <tr><td>Slapy</td> <td>30</td> <td>50</td><td><a href="log_details.html">Detail</a> </td></tr>
+                <tr> <td>Orlík</td> <td> 50</td> <td>80</td><td><a href="log_details.html">Detail</a> </td></tr>
+                <tr><td>Slapy</td> <td>30</td> <td>50</td><td><a href="log_details.html">Detail</a> </td></tr>
+                <tr> <td>Orlík</td> <td> 50</td> <td>80</td><td><a href="log_details.html">Detail</a> </td></tr>
+            </table>
+        </section>
+    </div>
 </main>
 </body>
 </html>
