--- a/log_edit.html
+++ b/log_edit.html
@@ -3,31 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit log</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
+<div class="container">
+<main>
+<nav class="nav ">
+    <ul class="nav">
+    <li><a  href="log_details.html"><span class="glyphicon glyphicon-chevron-left"></span>Zpět</a> </li></ul>
 
-<nav>
-    <li><a href="log_details.html">Zpět</a> </li>
 </nav>
-<section>
+<section class="col-md-6 col-md-offset-3">
     <h2>Editovat log</h2>
-    <form>
+    <form class="form-group">
         <label for="hloubka">Hloubka:</label>
-        <input type="number" min="0" max="1000" id="hloubka" placeholder="Hloubka" required>
+        <input type="number" min="0" class="form-control" max="1000" id="hloubka" placeholder="Hloubka" required>
         <label for="doba">Doba ponoru:</label>
-        <input type="number" step="5" id="doba" min="0"max="10000" placeholder="Doba ponoru" required>
+        <input type="number" step="5" id="doba" class="form-control" min="0" max="10000" placeholder="Doba ponoru" required>
         <label for="poc_tlak">Počáteční tlak</label>
-        <input type="number" step="10" id="poc_tlak" min="0" max="400" placeholder="Počáteční tlak">
+        <input type="number" step="10" id="poc_tlak" class="form-control" min="0" max="400" placeholder="Počáteční tlak">
         <label for="kon_tlak">Koncový tlak</label>
-        <input type="number" step="10" id="kon_tlak" min="0" max="400" placeholder="Koncový tlak">
+        <input type="number" step="10" id="kon_tlak" class="form-control" min="0" max="400" placeholder="Koncový tlak">
         <label for="buddy">Buddy:</label>
-        <input type="text" id="buddy" placeholder="Buddy">
+        <input type="text" id="buddy" class="form-control" placeholder="Buddy">
         <label for="date">Datum ponoru:</label>
-        <input type="date" id="date" required>
-        <input type="submit" value="Uložit změny">
-        <input type="reset" value="Storno">
+        <input type="date" class="form-control" id="date" required>
+        <input type="submit" class="btn btn-default" value="Uložit změny">
+        <input type="reset" class="btn btn-default" value="Storno">
     </form>
 </section>
-</main>
+</main></div>
+
 </body>
 </html>
