--- a/log_book.html
+++ b/log_book.html
@@ -9,19 +9,17 @@
 </head>
 <body>
 <main class="container-fluid">
-    </nav>
-    <aside class="col-md-3 ">
-        <img src="http://www.csueastbay.edu/directory/profiles/files/images/sample-profile-pic.png" alt="profile picture">
-        <div class="user_info">
+    <aside class="col-md-3 profil-aside text-center  ">
+        <img class="img-circle"  src="http://www.csueastbay.edu/directory/profiles/files/images/sample-profile-pic.png" alt="profile picture">
+        <div class="user_info" >
             <p>Jan Novák</p>
             <p> jan.novak@gmail.com</p>
             <p> Počet ponorů: 200</p>
             <p>Certifikace: OWD</p>
             <div class="actions">
-                <ul>
-                <li><a href="profile.html">Detail</a></li>
-                    <li><a href="index.html">Odhlásit se</a></li>
-                </ul>
+                <p><a href="profile.html">Detail</a></p>
+                    <p><a href="index.html">Odhlásit se</a></p>
+
             </div>
         </div>
     </aside>
@@ -35,12 +33,12 @@
                     <li><a href="compressor.html">Kompresor</a></li>
                 </ul>
             <h1>Log Book</h1>
-            <a href="add_log.html">Přidat log</a>
+            <a href="add_log.html"><span class="glyphicon glyphicon-plus"></span> Přidat log</a>
         </header>
-        <section>
+        <section class="bg">
             <h2>Ponory</h2>
-            <table class="table">
-                <tr> <th>Lokalita</th> <th> Hloubka(m)</th> <th> Čas (min)</th> </tr>
+            <table class="table table-hover">
+                <tr> <th>Lokalita</th> <th> Hloubka(m)</th> <th> Čas (min)</th> <th></th> </tr>
                 <tr><td>Slapy</td> <td>30</td> <td>50</td><td><a href="log_details.html">Detail</a> </td></tr>
                 <tr> <td>Orlík</td> <td> 50</td> <td>80</td><td><a href="log_details.html">Detail</a> </td></tr>
                 <tr><td>Slapy</td> <td>30</td> <td>50</td><td><a href="log_details.html">Detail</a> </td></tr>
