--- a/add_log.html
+++ b/add_log.html
@@ -3,35 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Log</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 </head>
 <body>
-<main>
-
+<main class="container">
     <nav>
-        <ul>
-        <li><a href="log_book.html">Zpět</a> </li>
+        <ul class="nav">
+            <li> <a href="log_book.html"><span class="glyphicon glyphicon-chevron-left"></span> Zpět</a> </li>
         </ul>
+
     </nav>
-    <header>
+
+    <section class="col-md-6 col-md-offset-3">
+        <header>
         <h1>Přidat ponor</h1>
     </header>
-    <section>
-        <form>
+        <form class="form-group">
 
             <label for="hloubka">Hloubka:</label>
-            <input type="number" min="0" max="1000" id="hloubka" placeholder="Hloubka" required>
+            <input type="number" min="0" class="form-control" max="1000" id="hloubka" placeholder="Hloubka" required>
             <label for="doba">Doba ponoru:</label>
-            <input type="number" step="5" id="doba" min="0" max="10000" placeholder="Doba ponoru" required>
+            <input type="number" step="5" id="doba" min="0"  class="form-control" max="10000" placeholder="Doba ponoru" required>
             <label for="poc_tlak">Počáteční tlak</label>
-            <input type="number" step="10" id="poc_tlak" min="0" max="400" placeholder="Počáteční tlak">
+            <input type="number" step="10" id="poc_tlak" min="0" class="form-control" max="400" placeholder="Počáteční tlak">
             <label for="kon_tlak">Koncový tlak</label>
-            <input type="number" step="10" id="kon_tlak" min="0" max="400" placeholder="Koncový tlak">
+            <input type="number" step="10" id="kon_tlak" min="0" class="form-control" max="400" placeholder="Koncový tlak">
             <label for="buddy">Buddy:</label>
-            <input type="text" id="buddy" placeholder="Buddy">
+            <input type="text" id="buddy" class="form-control" placeholder="Buddy">
             <label for="date">Datum ponoru:</label>
-            <input type="date" id="date" required>
-            <input type="submit" value="Přidat ponor">
-            <input type="reset" value="Resetovat">
+            <input type="date" id="date" class="form-control" required>
+            <input type="submit" class="btn btn-default" value="Přidat ponor">
+            <input type="reset" class="btn btn-default" value="Resetovat">
         </form>
     </section>
 </main>
