--- a/compressor.html
+++ b/compressor.html
@@ -3,29 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 </head>
 <body>
-<main>
-    <nav>
-        <ul>
+<main class="container-fluid">
+
+    <aside class="col-md-3 profil-aside text-center  ">
+        <img class="img-circle"  src="http://www.csueastbay.edu/directory/profiles/files/images/sample-profile-pic.png" alt="profile picture">
+        <div class="user_info" >
+            <p>Jan Novák</p>
+            <p> jan.novak@gmail.com</p>
+            <p> Počet ponorů: 200</p>
+            <p>Certifikace: OWD</p>
+            <div class="actions">
+                <p><a href="profile.html">Detail</a></p>
+                <p><a href="index.html">Odhlásit se</a></p>
+
+            </div>
+        </div>
+    </aside>
+    <div class="col-md-6">
+    <nav >
+        <ul class="nav nav-tabs">
             <li><a href="log_book.html">Log Book</a></li>
             <li><a href="compressor.html">Kompresor</a></li>
         </ul>
     </nav>
-    <div>
+        <section class="bg">
         <div>
             <h1>Kompresor</h1>
-            <a href="add_compressor.html">Přidat kompresor</a>
-            <table>
+            <a class="glyphicon glyphicon-plus" href="add_compressor.html">Přidat kompresor</a>
+            <table class="table table-hover">
             <tr> <th>Výrobce</th> <th> Typ</th> <th>Servisováno</th> <th>Další servis za</th></tr>
             <tr><td>Benda</td> <td>MK120</td> <td>21.12.2016</td><td> 30 hod</td></tr>
             </table>
         </div>
-        <section>
+
             <div>
                 <h2>Kompresor log</h2>
-                <a href="add_comp_log.html">Přidat záznam</a>
-                <table>
+                <a class="glyphicon glyphicon-plus" href="add_comp_log.html">Přidat záznam</a>
+                <table class="table table-hover">
 
 
                 <tr> <th>Datum</th> <th> Čas (min)</th> <th>Kompresor</th></tr>
@@ -36,21 +55,7 @@
             </div>
         </section>
     </div>
-    <aside>
-        <img src="http://www.csueastbay.edu/directory/profiles/files/images/sample-profile-pic.png" alt="profile picture">
-        <div class="user_info">
-            <p>Jan Novák</p>
-            <p> jan.novak@gmail.com</p>
-            <p> Počet ponorů: 200</p>
-            <p>Certifikace: OWD</p>
-            <div class="actions">
-                <ul>
-                    <li><a href="profile.html">Detail</a></li>
-                    <li><a href="index.html">Odhlásit se</a></li>
-                </ul>
-            </div>
-        </div>
-    </aside>
+
 </main>
 </body>
 
