--- a/pass_change.html
+++ b/pass_change.html
@@ -2,31 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Registrace</title>
+    <title>Změna hesla</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 </head>
 <body>
 <main class="container">
+    <nav>
+        <ul class="nav nav-tabs">
+            <li> <a href="profile.html"><span class="glyphicon glyphicon-chevron-left"></span> Zpět</a> </li>
+        </ul>
+
+    </nav>
+
     <section class="col-md-6 col-md-offset-3">
-        <h1>Registrace</h1>
+        <h1>Změna Hesla</h1>
         <form class="form-group">
-            <label for="jmeno">Jméno:</label>
-            <input class="form-control" type="text" id="jmeno" required>
-            <label for="prijmeni">Příjmení:</label>
-            <input class="form-control" type="text" id="prijmeni" required>
-            <label for="reg_email">Email:</label>
-            <input class="form-control" type="text" id="reg_email" value="@">
             <label for="pass_reg">Heslo:</label>
             <input class="form-control" type="password" id="pass_reg" required>
             <label for="pass_reg2">Heslo znovu:</label>
             <input class="form-control" type="password" id="pass_reg2" required>
-            <input class="btn btn-default" type="submit" value="Registrovat se!">
+            <input type="reset" class="btn btn-default" value="Storno">
+            <input class="btn btn-default" type="submit" value="Změnit heslo!">
 
         </form>
     </section>
 
 </main>
+
 </body>
 </html>
