--- a/profile.html
+++ b/profile.html
@@ -3,27 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 </head>
 <body>
+<main class="container">
 <nav>
-    <ul>
-    <li><a href="log_book.html">Zpět</a> </li>
+    <ul class="nav nav-tabs">
+        <li> <a href="log_book.html"><span class="glyphicon glyphicon-chevron-left"></span> Zpět</a> </li>
     </ul>
-</nav>
-<section>
 
-    <img src="http://www.csueastbay.edu/directory/profiles/files/images/sample-profile-pic.png" alt="profile picture">
-    <button type="button">Nový|změnit</button>
-    <button type="button">Upravit</button>
+</nav>
+<section class="col-md-4 col-md-offset-4 bg text-center">
+
+    <img class="img-circle" src="http://www.csueastbay.edu/directory/profiles/files/images/sample-profile-pic.png" alt="profile picture">
+    <div>
+    <button class="btn btn-default" type="button">Nový|změnit</button>
+    <button class="btn btn-default" type="button">Upravit</button>
+    </div>
     <div class="user_info">
         <p>Jan Novák</p>
         <p> jan.novak@gmail.com</p>
         <p> Počet ponorů: 200</p>
         <p>Certifikace: OWD</p>
         <p>Potápí se od roku: 2000</p>
-        <button type="button">Změnit heslo</button>
-        <button type="button">Upravit profil</button>
+        <button class="btn btn-default" type="button">Změnit heslo</button>
+        <button class="btn btn-default" type="button">Upravit profil</button>
     </div>
 </section>
+</main>
 </body>
 </html>
